@@ -48,7 +48,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class MapperService extends AbstractIndexComponent implements Closeable {
 
@@ -176,7 +175,7 @@ public class MapperService extends AbstractIndexComponent implements Closeable {
     }
 
     public boolean hasNested() {
-        return mappingLookup().hasNested();
+        return mappingLookup().nestedLookup() != NestedLookup.EMPTY;
     }
 
     public IndexAnalyzers getIndexAnalyzers() {
@@ -226,10 +225,7 @@ public class MapperService extends AbstractIndexComponent implements Closeable {
             // empty JSON is a common default value so it makes sense to optimize for it a little
             return Map.of();
         }
-        try (
-            XContentParser parser = XContentType.JSON.xContent()
-                .createParser(xContentRegistry, LoggingDeprecationHandler.INSTANCE, mappingSource)
-        ) {
+        try (XContentParser parser = XContentType.JSON.xContent().createParser(parserConfig(xContentRegistry), mappingSource)) {
             return parser.map();
         }
     }
@@ -241,15 +237,14 @@ public class MapperService extends AbstractIndexComponent implements Closeable {
         throws IOException {
         try (
             InputStream in = CompressorFactory.COMPRESSOR.threadLocalInputStream(mappingSource.compressedReference().streamInput());
-            XContentParser parser = XContentType.JSON.xContent()
-                .createParser(
-                    XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry)
-                        .withDeprecationHandler(LoggingDeprecationHandler.INSTANCE),
-                    in
-                )
+            XContentParser parser = XContentType.JSON.xContent().createParser(parserConfig(xContentRegistry), in)
         ) {
             return parser.map();
         }
+    }
+
+    private static XContentParserConfiguration parserConfig(NamedXContentRegistry xContentRegistry) {
+        return XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry).withDeprecationHandler(LoggingDeprecationHandler.INSTANCE);
     }
 
     /**
@@ -468,7 +463,7 @@ public class MapperService extends AbstractIndexComponent implements Closeable {
             .stream()
             .map(mappingLookup::getFieldType)
             .filter(MappedFieldType::eagerGlobalOrdinals)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -508,6 +503,10 @@ public class MapperService extends AbstractIndexComponent implements Closeable {
      */
     public boolean isMetadataField(String field) {
         return mapperRegistry.getMetadataMapperParsers(indexVersionCreated).containsKey(field);
+    }
+
+    public boolean isMultiField(String field) {
+        return mappingLookup().isMultiField(field);
     }
 
     public synchronized List<String> reloadSearchAnalyzers(AnalysisRegistry registry) throws IOException {
